welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:12: error: type mismatch;
 found   : Unit
 required: String
	} else if ( vacation==true ) {
               ^